[WPE] <dialog> does not close if Escape is pressed inside a contenteditable element https://bugs.webkit.org/show_bug.cgi?id=297091

Reviewed by Carlos Garcia Campos.

This commit fixes two issues related to handling of 'Escape' character
in WPEWebKit.

First one, when WPE's MiniBrowser handles the 'Escape' character it
should return FALSE, so the keypress also reaches the UIProcess.

Then, 'WebEditorClientWPE' should not capture 'Escape' to emit a 'Cancel'
command. In addition, 'Cancel' is not a command in 'EditorCommand.cpp'.

* LayoutTests/platform/wpe/imported/w3c/web-platform-tests/html/semantics/interactive-elements/the-dialog-element/dialog-cancel-with-input-expected.txt: Removed.
* Source/WebKit/WebProcess/WebCoreSupport/wpe/WebEditorClientWPE.cpp:
* Tools/MiniBrowser/wpe/main.cpp:

Canonical link: https://commits.webkit.org/298562@main